--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,18 +8,21 @@
     --secondary-color: #f5f4e8;
     --secondary-color-opacity: rgba(245, 244, 232, 0.8);
     --emphasis-color: #414141;
-    --green: rgb(232, 239, 181);
+    --green: #27ae60;
+    --green-light: rgb(232, 239, 181);
     --green-opacity: rgba(232, 239, 181, 0.7);
-    --orange: #ffbc5f;
-    --orange-light: #fac587;
+    --orange: #f5a53c;
+    --orange-light: #f9c079;
     --orange-dark: #c17926;
     --orange-opacity: rgba(250, 188, 116, 0.6);
-    --blue-light: #a2cffe;
-    --red: rgb(246, 152, 152);
+    --blue: #1E90FF;
+    --blue-light: #89CFF0;
+    --red: rgb(219, 120, 120);
     --red-dark: rgb(227, 71, 71);
-    --red-light: rgb(250, 220, 220);;
+    --red-light: rgb(240, 180, 180);
     --purple: rgb(234 210 255);
-
+    --purple: #924ead;
+    
     --shadow1: 3px 0 5px 0 rgba(33, 20, 20, 0.14);
     --shadow2: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     --shadow3: var(--dark-gray) 2px 2px 2px;
@@ -37,11 +40,23 @@
     --radius5: 30px;
 }
 
-.high_tag{background: var(--red-dark);}
-.medium_tag{background: var(--red);}
-.low_tag{background: var(--red-light);}
+
+/* priority */
+.task.High{background: var(--orange-light);}
+.task.Medium{background: var(--red-light);}
+.task.Low{background: var(--blue-light);}
+
+.important_mark.High{background: var(--orange);}
+.important_mark.Medium{background: var(--red);}
+.important_mark.Low{background: var(--blue);}
+
+/* status */
+.Done{background: var(--green);}
+.Pending{background: var(--purple);}
+.Doing{background: var(--red-dark);}
 
 .active{background: var(--orange) !important;}
+
 
 body{   
     color: var(--emphasis-color);
@@ -51,12 +66,11 @@ body{
 
 }
 .container{
-    max-width: 1024px;
+    max-width: 768px;
     min-height: 100vh;
     margin: 0 auto;
     position: relative;
 }
-
 
 .container Header{
     width: 100%;
@@ -68,14 +82,10 @@ body{
     align-items: center;
 }
 Header .title_container{
-    background: var(--secondary-color);
-    text-shadow: var(--shadow3);
     width: 100%;
     height: auto;
     text-align: center;
     font-size: var(--font-size3);
-    border: 2px solid var(--emphasis-color);
-    border-radius: 50% 5px 50% 5px;
 }
 Header .input_tags_container{
     width: 100%;
@@ -118,7 +128,7 @@ Header .input_task_container .input_task{
     border-bottom: 2px solid var(--emphasis-color);
     background-color: var(--main-color);
     color: var(--secondary-color) !important;
-    width: 300px;
+    width: 250px;
     height: 100%;
     padding: 0 10px;
     font-size: var(--font-size2);
@@ -132,15 +142,18 @@ Header .input_task_container .input_task{
     color: var(--secondary-color-opacity);
 }
 header .input_task_container .add_task_button{
-    width: 50px;
-    height: 30px;
+    width: 60px;
+    height: 36px;
+    margin-left: 10px;
+    font-size: var(--font-size1);
     border-radius: var(--radius1);
-    background-color: var(--emphasis-color);
-    color: var(--secondary-color);
+    background-color: var(--green-opacity);
+    color: var(--emphasis-color);
     outline: none;
 }
 header .input_task_container .add_task_button:hover{
     cursor: pointer;
+    background-color: var(--orange);
 }
 
 
@@ -157,13 +170,12 @@ main {
     justify-content: center;
     align-items: center;
 
-    border: 3px solid var(--emphasis-color);
     border-radius: var(--radius2);
     background-color: var(--secondary-color);
     box-shadow: var(--shadow1);
 }
 main .task_container{
-    width: 80%;
+    width: 90%;
     height: 100%;
     overflow-y: scroll;
     box-sizing: border-box;
@@ -176,9 +188,6 @@ main .task_container{
 main .task_container::-webkit-scrollbar {
     width: 8px;
 }
-main .task_container::-webkit-scrollbar-track {
-    background: var(--green);
-}
 main .task_container::-webkit-scrollbar-thumb {
     background-color: var(--orange);
 }
@@ -188,18 +197,12 @@ main .task_container .task{
     justify-content: space-between;
     align-items: center;
     
-    width: 98%;
+    width: 100%;
     line-height: 70px;
 
     box-sizing: border-box;
-    border-radius: var(--radius3);
+    border-radius: var(--radius1);
     margin: 10px 0;
-}
-main .task_container .task:nth-child(even){
-    background-color: var(--orange-light);
-}
-main .task_container .task:nth-child(odd){
-    background-color: var(--blue-light);
 }
 
 main .task_container .task .important_mark{
@@ -207,8 +210,8 @@ main .task_container .task .important_mark{
     line-height: 40px;
 
     border-radius: var(--radius4);
-    font-weight: 600;
-    text-shadow: var(--secondary-color) 1px 1px 1px;
+    color: var(--secondary-color);
+    text-shadow: var(--emphasis-color) 1px 1px 1px;
     
     text-align: center;
     margin: 0 10px;
@@ -224,8 +227,14 @@ main .task_container .task .task_title{
 }
 main .task_container .task .is_finish_tags{
     width: 140px;
-    background-color: var(--purple);
+    line-height: 40px;
+
+    border-radius: var(--radius1);
+    color: var(--secondary-color);
+    text-shadow: var(--emphasis-color) 1px 1px 1px;
+    
     text-align: center;
+    margin: 0 10px;
 }
 
 
@@ -235,4 +244,30 @@ footer{
     width: 100%;
     line-height: 40px;
     text-align: center;
+}
+
+
+
+
+/* Media Query */
+@media screen and (max-width: 768px){
+    .container Header{
+        height: 180px;
+    }
+    main {
+        height: 380px;
+    }
+
+    main .task_container::-webkit-scrollbar {
+        width: 0px;
+    }
+    main .task_container::-webkit-scrollbar-thumb {
+        background-color: var(--orange);
+    }
+}
+
+@media screen and (max-width: 480px){
+    main .task_container{
+        width: 98%;
+    }
 }
