feat: add restful api style

--- a/listPage/templates/home/index.html
+++ b/listPage/templates/home/index.html
@@ -27,6 +27,9 @@
         </Header>
         <main>
             <div id="task_container" class="task_container"></div>
+            <div class="save_btn_container">
+                <button id="save_button" class="save_button display_none">Save</button>
+            </div>
         </main>
         <footer>
             <p>Created by Jam</p>
